--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rsuite": "^4.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
