--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "rsuite": "^4.8.1"
+    "rsuite": "^4.8.1",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
